--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
+html, body, .container, #root { 
+  width: 100%;
+  height: 100%; 
+  margin: 0; 
+} 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.app-container { 
+  display: flex; 
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: fit-content; 
+  width: fit-content;
+  gap: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.photo { 
+  height: 75rem;
+  width: 50rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.clickable-div { 
+  position: absolute; 
+  top: var(--y); 
+  left: var(--x);
+  border: 2px solid red;
+  padding: 1rem;
+  overflow: auto;
 }
