finished clickable div positioning

--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,8 @@ html, body, .container, #root {
 
 .clickable-div { 
   position: absolute; 
-  top: var(--y); 
-  left: var(--x);
+  top: 0; 
+  left: 0;
   border: 2px solid red;
   padding: 1rem;
   overflow: auto;
