--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,6 @@ html, body, .container, #root {
   gap: 1rem;
 }
 
-
-
 .photo { 
   height: 75rem;
   width: 50rem;
@@ -26,6 +24,7 @@ html, body, .container, #root {
   top: 0; 
   left: 0;
   border: 2px solid red;
-  padding: 1rem;
+  height: 25px;
+  width: 25px;
   overflow: auto;
 }
