implementing dropdown for selecting items

--- a/src/App.css
+++ b/src/App.css
@@ -21,10 +21,8 @@ html, body, .container, #root {
 
 .clickable-div { 
   position: absolute; 
-  top: 0; 
-  left: 0;
   background-color: white;
-  height: 5rem;
-  width: 5rem;
+  height: fit-content;
+  width: fit-content;
   overflow: auto;
 }
