implemented dynamic item found status update

--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,7 @@ html, body, .container, #root {
   background-color: white;
   height: fit-content;
   width: fit-content;
+  min-height: 1rem;
+  min-width: 1rem;
   overflow: auto;
 }
