building home page for choosing level

--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,11 @@ html, body, .container, #root {
   min-width: 1rem;
   overflow: auto;
 }
+
+.logOutBtn { 
+  display: none;
+}
+
+.logOutBtn-show { 
+  display: block;
+}
