--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,3 +1,23 @@
+
+.header { 
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.title { 
+  font-size: 50px;
+  letter-spacing: 5px;
+}
+
+a { 
+  text-decoration: none;
+  font-size: ;
+  letter-spacing: 1px;
+  color: red;
+}
+
 .logOutBtn { 
   display: none;
 }
