--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -11,8 +11,28 @@
 	align-items: center;
 	border: 1px solid black;
   border-radius: 8px;
-	width: 10rem;
-	height: 15rem;
+	width: 15rem;
+	height: 20rem;
+	
+}
+
+#cardEasy { 
+	box-shadow: 0px 0px 20px 0px rgb(88, 187, 88); 
+  transition: all .2s ease-in-out;
+} 
+
+#cardMedium { 
+	box-shadow: 0px 0px 20px 0px rgb(95, 141, 238); 
+  transition: all .2s ease-in-out;
+}  
+
+#cardHard { 
+	box-shadow: 0px 0px 20px 0px rgb(236, 91, 91); 
+  transition: all .2s ease-in-out;
+} 
+
+.card:hover { 
+  transform: scale(1.1);
 }
 
 .easy, .medium, .hard{
