--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,17 +2,19 @@
 	display: flex;
 	flex-direction: row;
   padding: 1rem;
-	gap: 1rem;
+	gap: 3rem;
 }
 
 .card {
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	justify-content: space-between;
 	align-items: center;
 	border: 1px solid black;
   border-radius: 8px;
 	width: 15rem;
 	height: 20rem;
+	color: white;
 	
 }
 
@@ -36,6 +38,6 @@
 }
 
 .easy, .medium, .hard{
-	max-width: 100%;
-	max-height: 100%;
+	width: 100%;
+	height: 60%;
 }
