--- a/src/styles/ModalStart.css
+++ b/src/styles/ModalStart.css
@@ -3,15 +3,46 @@
   justify-content: center;
   position: absolute;
   flex-direction: column;
-  border: 1px solid white;
+  border: 2px solid white;
   border-radius: 8px;
   background: white;
   gap: 1rem;
   padding: 2rem;
-  height: 10rem;
-  width: 7.5rem;
+  height: 15rem;
+  width: 10rem;
+  background: linear-gradient(to right, #20195a, #554cb1, #5a5aa0);
 }
 
 .modal-container-hide { 
   display: none;
+}
+
+.modal-container > button { 
+  display: inline-block;
+	outline: 0;
+	border: 0;
+	cursor: pointer;
+	will-change: box-shadow, transform;
+	background: linear-gradient(to right, #20195a, #554cb1, #5a5aa0);
+	box-shadow: 0px 2px 4px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%),
+		inset 0px -3px 0px rgb(58 65 111 / 50%);
+	padding: 0 15px;
+	border-radius: 6px;
+	color: #fff;
+	height: 48px;
+	font-size: 15px;
+	letter-spacing: 2px;
+	text-shadow: 0 1px 0 rgb(0 0 0 / 40%);
+	transition: box-shadow 0.15s ease, transform 0.15s ease;
+	font-family: 'Nordic Light', Arial, Helvetica, sans-serif;
+}
+
+.modal-container > button:hover {
+	box-shadow: 0px 4px 8px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px #3c4fe0;
+	transform: translateY(-2px);
+}
+
+.modal-container > button:active {
+	box-shadow: inset 0px 3px 7px #3c4fe0;
+	transform: translateY(2px);
 }
