--- a/src/styles/ModalEnd.css
+++ b/src/styles/ModalEnd.css
@@ -1,34 +1,22 @@
-.header {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+.modalEndContainer { 
+  display: none; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  padding: 2rem;
+  border: 1px solid black; 
+  border-radius: 8px;
+  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+  color: whitesmoke;
 }
 
-.title {
-	font-size: 50px;
-	letter-spacing: 5px;
+.modalEndContainer-show { 
+  display: flex; 
 }
 
-.leaderboardBtn {
-	font-size: 20px;
-	letter-spacing: 1px;
-	color: red;
-	padding: 3px;
-	border-radius: 8px;
-}
-
-.leaderboardBtn:hover {
-	transform: scale(1.1);
-	box-shadow: 0px 0px 10px 4px rgba(245, 245, 245, 0.5);
-}
-
-.leaderboardBtn-hidden { 
-	display: none;
-}
-
-.logOutBtn {
-	display: none;
+.modalExit { 
+  display: inline-block;
 	outline: 0;
 	border: 0;
 	cursor: pointer;
@@ -45,18 +33,15 @@
 	text-shadow: 0 1px 0 rgb(0 0 0 / 40%);
 	transition: box-shadow 0.15s ease, transform 0.15s ease;
 	font-family: 'Nordic Light', Arial, Helvetica, sans-serif;
+  width: fit-content;
 }
 
-.logOutBtn-show {
-	display: inline-block;
-}
-
-.logOutBtn:hover {
+.modalExit:hover {
 	box-shadow: 0px 4px 8px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px #3c4fe0;
 	transform: translateY(-2px);
 }
 
-.logOutBtn:active {
+.modalExit:active {
 	box-shadow: inset 0px 3px 7px #3c4fe0;
 	transform: translateY(2px);
 }
